Updates from Overleaf

--- a/memtfg.tex
+++ b/memtfg.tex
@@ -142,7 +142,7 @@
 \HRule
 \begin{flushright}
         {\Huge Generador Estático de LMS} \\[2.5mm]
-        {\Large \textit{Astro}} \\[5mm]
+        {\Large \textit{AdAstra}} \\[5mm]
         {\Large Jaime Armas Rivero} \\[5mm]
 
 \end{flushright}
