--- a/introduccion.tex
+++ b/introduccion.tex
@@ -39,12 +39,28 @@ Con el objetivo de abordar esta limitación, se propone una aplicación que util
 %     \item Interfaz rápida y amigable
 % \end{itemize}
 
-Existen algunas herramientas en línea que permiten a los profesores crear páginas web para sus cursos, pero la mayoría de ellas son propietarias y no se integran de manera efectiva con GitHub Classroom. Además, estas herramientas a menudo son costosas y no están diseñadas específicamente para la enseñanza de programación. También está la alternativa de crear la infraestructura deseada a mano lo cual requeriría de conocimientos previos en lo relacionado
+% Existen algunas herramientas en línea que permiten a los profesores crear páginas web para sus cursos, pero la mayoría de ellas son propietarias y no se integran de manera efectiva con GitHub Classroom. Además, estas herramientas a menudo son costosas y no están diseñadas específicamente para la enseñanza de programación. También está la alternativa de crear la infraestructura deseada a mano lo cual requeriría de conocimientos previos en lo relacionado.   
 
-Por otro lado, GitHub GraphQL es una API que permite a los desarrolladores obtener información detallada sobre los repositorios de GitHub. Esto permite una mayor flexibilidad en la creación de aplicaciones que se integren con GitHub, como la aplicación propuesta.
+% Por otro lado, GitHub GraphQL es una API que permite a los desarrolladores obtener información detallada sobre los repositorios de GitHub. Esto permite una mayor flexibilidad en la creación de aplicaciones que se integren con GitHub, como la aplicación propuesta.
 
-Astro es una herramienta que permite la creación de páginas web estáticas utilizando componentes de JavaScript. Es fácil de usar y tiene una sintaxis clara y concisa, lo que la hace ideal para la creación de páginas web para LMS.
+% Astro es una herramienta que permite la creación de páginas web estáticas utilizando componentes de JavaScript. Es fácil de usar y tiene una sintaxis clara y concisa, lo que la hace ideal para la creación de páginas web para LMS.
 
-En resumen, la aplicación propuesta utiliza la filosofía de GitHub Classroom y se integra con GitHub GraphQL y Astro para permitir a los profesores crear páginas web estáticas para LMS de manera efectiva y económica. Esto proporciona una alternativa viable y accesible para la enseñanza de programación en línea.
+% En resumen, la aplicación propuesta utiliza la filosofía de GitHub Classroom y se integra con GitHub GraphQL y Astro para permitir a los profesores crear páginas web estáticas para LMS de manera efectiva y económica. Esto proporciona una alternativa viable y accesible para la enseñanza de programación en línea.
 % Añadir moodle y google classroom y ventajas y sobre todo desventajas
 % se puede usar gitlab o bitbucket
+
+Existen algunas herramientas en línea populares para la creación de páginas web para la enseñanza, como Moodle y Google Classroom. Sin embargo, estas herramientas están diseñadas para la educación en general y no específicamente para la enseñanza de programación. Además, aunque son gratuitas, pueden requerir una curva de aprendizaje para su uso efectivo.
+
+Por otro lado, GitLab y Bitbucket son plataformas populares para la colaboración y gestión de proyectos de programación. Aunque ambos permiten la creación de páginas web para repositorios, su enfoque principal no es la creación de un LMS completo. GitHub Classroom, por otro lado, es una extensión de GitHub que se centra específicamente en la enseñanza de programación. Permite a los profesores crear repositorios y asignaciones para los estudiantes, y ofrece una integración más efectiva con GitHub GraphQL o GitHub API REST.
+
+La aplicación propuesta utiliza GitHub Classroom, GitHub GraphQL y Astro para proporcionar una alternativa viable y accesible para la creación de páginas web para LMS de programación en línea.
+
+Astro es una herramienta que permite la creación de páginas web estáticas utilizando componentes de JavaScript. Es fácil de usar y tiene una sintaxis clara y concisa, lo que la hace ideal para la creación de páginas web para LMS. Aunque existen otras herramientas para generación de web estáticas como Jekyll o Hugo, la cuales han sido muy populares en los últimos años, en este caso se ha decidido por usar Astro, un framework\cite{framework} nuevo y novedoso.
+
+Esto se debe a que algunas de las principales desventajas de Jekyll y Hugo es que pueden tener una curva de aprendizaje pronunciada para los nuevos usuarios. La sintaxis y la configuración pueden ser complejas para aquellos que no tienen experiencia previa en la creación de sitios web estáticos. Además, a medida que un proyecto se vuelve más complejo, Jekyll y Hugo pueden requerir más tiempo y esfuerzo para mantener y actualizar.
+
+Mientras que las razones por la que se han elegido a Astro han sido su facilidad de uso, su sintaxis clara y concisa, la oportunidad que ofrecer al integrarse con otros frameworks para UI, como React\cite{react} o Angular\cite{angular}, su integración directa con la metodología Jamstack, su fácil personalización a través de plugins, etc.
+
+Además de GitHub GraphQL, GitHub también proporciona una API REST que permite a los desarrolladores interactuar con los repositorios de GitHub. Aunque la API REST no proporciona la misma cantidad de información detallada que GraphQL, sigue siendo una herramienta poderosa para la integración con GitHub.
+
+En comparación con GraphQL, la API REST puede ser más fácil de usar para proyectos más pequeños y simples. También es posible que algunos desarrolladores prefieran la sintaxis y el enfoque de REST sobre GraphQL. Sin embargo, para proyectos más complejos que requieren más información detallada, GraphQL puede ser una mejor opción.
