Updates from Overleaf

--- a/bib.tex
+++ b/bib.tex
@@ -15,7 +15,17 @@ physics-related items. Next, \textit{The \LaTeX\ Companion} book
 
 \printbibliography
 
+
+
 \end{document}
+
+@software{turborepo,
+	author = {{Vercel}},
+	title = {Turborepo},
+	type = {software},
+	url = {https://turbo.build/repo},
+	version = {1.10.7},
+}
 
 @online{knuthwebsite,
     author = "Donald Knuth",
@@ -24,3 +34,4 @@ physics-related items. Next, \textit{The \LaTeX\ Companion} book
     addendum = "(accessed: 01.09.2016)",
     keywords = "latex,knuth"
 }
+
