--- a/memtfg.tex
+++ b/memtfg.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{alltt}
+\usepackage[citestyle=numeric,bibstyle=apa]{biblatex}
 
 \usepackage[ruled,vlined,commentsnumbered,linesnumbered,inoutnumbered,titlenotnumbered,noend]{algorithm2e}
 \SetKwRepeat{Do}{do}{while}
@@ -23,7 +24,7 @@
 \usepackage{graphicx}
 \usepackage{lscape}
 \usepackage{microtype}
-\usepackage{natbib}
+% \usepackage{natbib}
 \usepackage{pdflscape}
 \usepackage{rotating}
 \usepackage{subcaption}
@@ -39,6 +40,78 @@
 \usepackage{epigraph}
 %\usepackage[sanitize=none]{glossaries}
 \usepackage[toc]{glossaries}
+
+%Define the listing package
+\usepackage{listings} %code highlighter
+\usepackage{color} %use color
+\definecolor{mygreen}{rgb}{0,0.6,0}
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\definecolor{mymauve}{rgb}{0.58,0,0.82}
+ 
+%Customize a bit the look
+\lstset{ %
+backgroundcolor=\color{white}, % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
+basicstyle=\footnotesize, % the size of the fonts that are used for the code
+breakatwhitespace=false, % sets if automatic breaks should only happen at whitespace
+breaklines=true, % sets automatic line breaking
+captionpos=b, % sets the caption-position to bottom
+commentstyle=\color{mygreen}, % comment style
+deletekeywords={...}, % if you want to delete keywords from the given language
+escapeinside={\%*}{*)}, % if you want to add LaTeX within your code
+extendedchars=true, % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+frame=single, % adds a frame around the code
+keepspaces=true, % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+keywordstyle=\color{blue}, % keyword style
+% language=Octave, % the language of the code
+morekeywords={*,...}, % if you want to add more keywords to the set
+numbers=left, % where to put the line-numbers; possible values are (none, left, right)
+numbersep=5pt, % how far the line-numbers are from the code
+numberstyle=\tiny\color{mygray}, % the style that is used for the line-numbers
+rulecolor=\color{black}, % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+showspaces=false, % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+showstringspaces=false, % underline spaces within strings only
+showtabs=false, % show tabs within strings adding particular underscores
+stepnumber=1, % the step between two line-numbers. If it's 1, each line will be numbered
+stringstyle=\color{mymauve}, % string literal style
+tabsize=2, % sets default tabsize to 2 spaces
+title=\lstname % show the filename of files included with \lstinputlisting; also try caption instead of title
+}
+%END of listing package%
+ 
+\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+ 
+%define Javascript language
+\lstdefinelanguage{JavaScript}{
+keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+keywordstyle=\color{blue}\bfseries,
+ndkeywords={class, export, boolean, throw, implements, import, this},
+ndkeywordstyle=\color{darkgray}\bfseries,
+identifierstyle=\color{black},
+sensitive=false,
+comment=[l]{//},
+morecomment=[s]{/*}{*/},
+commentstyle=\color{purple}\ttfamily,
+stringstyle=\color{red}\ttfamily,
+morestring=[b]',
+morestring=[b]"
+}
+ 
+\lstset{
+language=JavaScript,
+extendedchars=true,
+basicstyle=\footnotesize\ttfamily,
+showstringspaces=false,
+showspaces=false,
+numbers=left,
+numberstyle=\footnotesize,
+numbersep=9pt,
+tabsize=2,
+breaklines=true,
+showtabs=false,
+captionpos=b
+}
+
 
 %\\linenumbers
 %\setlength\linenumbersep{5pt}
@@ -116,6 +189,8 @@
     urlcolor = cyan,
 }
 
+\addbibresource{memtfg.bib}
+
 \begin{document}
 
 \renewcommand\listtablename{Índice de Tablas}    
@@ -141,8 +216,9 @@
 
 \HRule
 \begin{flushright}
-        {\Huge Generador Estático de LMS} \\[2.5mm]
-        {\Large \textit{AdAstra}} \\[5mm]
+        {\Huge AdAstra: Un Generador Estático de Sistemas de Gestión de Aprendizaje %(LMS)
+        } \\[2.5mm]
+        %{\Large \textit{AdAstra}} \\[5mm]
         {\Large Jaime Armas Rivero} \\[5mm]
 
 \end{flushright}
@@ -165,16 +241,14 @@ D. {\bf Casiano Rodríguez León}, con N.I.F. 42.020.072-S  profesor Catedrátic
 
 \bigskip
 \bigskip
-{\bf C E R T I F I C A N}
+{\bf C E R T I F I C A}
 
 \bigskip
 \bigskip
 Que la presente memoria titulada:
 
 \bigskip
-''{\it GitHub Cli Extensions for the GitHub
-Education Community}''
-
+AdAstra: Un Generador Estático de Sistemas de Gestión de Aprendizaje
 \bigskip
 \bigskip
 \bigskip
@@ -411,16 +485,19 @@ github-education, astro, github-classroom, graphql, git, javascript, typescript
 
 \end{appendix}
 %\printnoidxglossaries
-\printglossary[title=Glosario, toctitle=Glosario]
+\printglossary[title=Glosario, toctitle={\protect \LARGE Glosario}]
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\begin{thebibliography}{X}
 % Aquí figurará la bibliografía
 %\end{thebibliography}
 %\bibliographystyle{plain}
-\bibliographystyle{unsrt}
+% \bibliographystyle{unsrt}
 
-\bibliography{memtfg} 
+
+\printbibliography
+\addcontentsline{toc}{chapter}{{\protect \LARGE Bibliografía}}
+
 %\bibliography{bib.tex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
